--- a/Este/MyProject2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Este/MyProject2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -820,6 +820,10 @@ PhysicalMaterial.Advanced=True
 PhysicalMaterial.Destruction=True
 PhysicalMaterial.PhysicalProperties=True
 PhysicalMaterial.Vehicles=True
+PhysicsSettings.Constants=True
+PhysicsSettings.Simulation=True
+PhysicsSettings.Framerate=True
+PhysicsSettings.Physical Surface=True
 
 [AssetEditorManager]
 CleanShutdown=False
@@ -847,6 +851,9 @@ RecentlyPlaced=/Game/Blueprints/MyPlayer.MyPlayer;
 /Game/Blueprints/Ball_Blueprint.Ball_Blueprint=0
 /Game/Blueprints/MyPlayerInterface.MyPlayerInterface=1
 /Game/Blueprints/NewPhysicalMaterial.NewPhysicalMaterial=1
+/Game/Blueprints/Ball_Mat.Ball_Mat=1
+/Game/Blueprints/TriggerMat.TriggerMat=1
+/Game/Blueprints/Phys_Mat.Phys_Mat=1
 
 [ContentBrowser]
 AssetDialog.ThumbnailSizeScale=0.100000
@@ -883,17 +890,18 @@ REINST_MyPlayer_C_60=Object.Character.CharacterMovement.Object.Character Movemen
 REINST_MyPlayer_C_106=Object.Character.CharacterMovement.Object.Character Movement (General Settings).RotationRate
 REINST_MyPlayer_C_110=Object.Character.CharacterMovement.Object.Character Movement (General Settings).RotationRate
 REINST_MyPlayer_C_114=Object.Character.CharacterMovement.Object.Character Movement (General Settings).RotationRate
-CameraComponent="Object.CameraSettings.PostProcessSettings" 
+CameraComponent=Object.CameraSettings.PostProcessSettings
 SceneComponent=
 ActorComponent=
 Ball_Blueprint_C=
 StaticMeshActor=
 LandscapeGrassType=Object.Grass.GrassVarieties" "Object.Grass.GrassVarieties.GrassVarieties[0]
 MaterialExpressionLandscapeLayerBlend=Object.Layers" "Object.Layers.Layers[0]" "Object.Layers.Layers[1]
-MaterialExpression=Object.Constant
+MaterialExpression="Object.Constant" 
 MaterialExpressionLandscapeGrassOutput=Object.GrassTypes" "Object.GrassTypes.GrassTypes[0]
 MaterialExpressionCustomOutput=Object.GrassTypes" "Object.GrassTypes.GrassTypes[0]
-MaterialExpressionConstant3Vector=Object.Constant
+MaterialExpressionConstant3Vector="Object.Constant" 
+PhysicalMaterial="Object.TireFrictionScales" 
 
 [DetailCustomWidgetExpansion]
 InputSettings=InputSettings.Bindings.AxisMappings.MoveX,InputSettings.Bindings.AxisMappings.MoveY,InputSettings.Bindings.AxisMappings.TurnRate,InputSettings.Bindings.ActionMappings.NewActionMapping_0,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Sprint,
