--- a/Este/PitchPirates/Config/DefaultEngine.ini
+++ b/Este/PitchPirates/Config/DefaultEngine.ini
@@ -83,4 +83,6 @@ AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 +PhysicalSurfaces=(Type=SurfaceType1,Name="PassThrough")
 
+[/Script/EngineSettings.GameMapsSettings]
+GlobalDefaultGameMode=/Game/Blueprints/Gamemode_Blueprint.Gamemode_Blueprint_C
 
