--- a/Este/PitchPirates/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Este/PitchPirates/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -47,8 +47,9 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 CurrentScalingGridSize=2
 
 [MRU]
-MRUItem0=D:/MyGAMES/PitchPirates/Content/MainLVL.umap
-MRUItem1=D:/MyGAMES/MyProject2/Content/MainLVL.umap
+MRUItem0=D:/Git/racine/Este/PitchPirates/Content/MainLVL.umap
+MRUItem1=D:/MyGAMES/PitchPirates/Content/MainLVL.umap
+MRUItem2=D:/MyGAMES/MyProject2/Content/MainLVL.umap
 
 [EditorStartup]
 LastLevel=/Game/MainLVL
@@ -1132,11 +1133,216 @@ AnimBlueprint.BlueprintOptions=True
 AnimBlueprint.ClassOptions=True
 AnimBlueprint.Interfaces=True
 AnimBlueprint.Thumbnail=True
+REINST_Ball_Blueprint_C_40.TransformCommon=True
+REINST_Ball_Blueprint_C_40.StaticMesh=True
+REINST_Ball_Blueprint_C_40.Materials=True
+REINST_Ball_Blueprint_C_40.Physics=True
+REINST_Ball_Blueprint_C_40.Collision=True
+REINST_Ball_Blueprint_C_40.Lighting=True
+REINST_Ball_Blueprint_C_40.Rendering=True
+REINST_Ball_Blueprint_C_40.Tags=True
+REINST_Ball_Blueprint_C_40.Input=True
+REINST_Ball_Blueprint_C_40.Actor=True
+REINST_Ball_Blueprint_C_40.Variable=True
+REINST_Ball_Blueprint_C_40.Sockets=True
+REINST_Ball_Blueprint_C_40.Events=True
+REINST_Ball_Blueprint_C_44.Variable=True
+REINST_Ball_Blueprint_C_44.TransformCommon=True
+REINST_Ball_Blueprint_C_44.Sockets=True
+REINST_Ball_Blueprint_C_44.StaticMesh=True
+REINST_Ball_Blueprint_C_44.Materials=True
+REINST_Ball_Blueprint_C_44.Physics=True
+REINST_Ball_Blueprint_C_44.Collision=True
+REINST_Ball_Blueprint_C_44.Lighting=True
+REINST_Ball_Blueprint_C_44.Rendering=True
+REINST_Ball_Blueprint_C_44.Tags=True
+REINST_Ball_Blueprint_C_44.Events=True
+REINST_Ball_Blueprint_C_48.Input=True
+REINST_Ball_Blueprint_C_48.Actor=True
+REINST_Ball_Blueprint_C_62.TransformCommon=True
+REINST_Ball_Blueprint_C_62.StaticMesh=True
+REINST_Ball_Blueprint_C_62.Materials=True
+REINST_Ball_Blueprint_C_62.Physics=True
+REINST_Ball_Blueprint_C_62.Collision=True
+REINST_Ball_Blueprint_C_62.Lighting=True
+REINST_Ball_Blueprint_C_62.Rendering=True
+REINST_Ball_Blueprint_C_62.Tags=True
+REINST_Ball_Blueprint_C_62.Input=True
+REINST_Ball_Blueprint_C_62.Actor=True
+REINST_Ball_Blueprint_C_88.Input=True
+REINST_Ball_Blueprint_C_88.Actor=True
+REINST_Ball_Blueprint_C_96.Input=True
+REINST_Ball_Blueprint_C_96.Actor=True
+REINST_Ball_Blueprint_C_104.Variable=True
+REINST_Ball_Blueprint_C_104.TransformCommon=True
+REINST_Ball_Blueprint_C_104.Sockets=True
+REINST_Ball_Blueprint_C_104.StaticMesh=True
+REINST_Ball_Blueprint_C_104.Materials=True
+REINST_Ball_Blueprint_C_104.Physics=True
+REINST_Ball_Blueprint_C_104.Collision=True
+REINST_Ball_Blueprint_C_104.Lighting=True
+REINST_Ball_Blueprint_C_104.Rendering=True
+REINST_Ball_Blueprint_C_104.Tags=True
+REINST_Ball_Blueprint_C_104.Events=True
+REINST_Ball_Blueprint_C_104.Input=True
+REINST_Ball_Blueprint_C_104.Actor=True
+Blueprint.Interfaces=True
+GameMapsSettings.DefaultMaps=True
+GameMapsSettings.LocalMultiplayer=True
+GameMapsSettings.DefaultModes=True
+GameMapsSettings.GameInstance=True
+MoviePlayerSettings.Movies=True
+ProjectPackagingSettings.Project=True
+ProjectPackagingSettings.Packaging=True
+AISystem.AISystem=True
+AISystem.AISystem | Movement=True
+AISystem.AISystem | Gameplay Tasks=True
+AnimationSettings.Compression=True
+AudioSettings.Audio=True
+AudioSettings.Quality=True
+CollisionProfile.Object Channels=True
+CollisionProfile.Trace Channels=True
+ConsoleSettings.General=True
+ConsoleSettings.AutoComplete=True
+CookerSettings.Cooker=True
+CookerSettings.Textures=True
+CrowdManager.Config=True
+GarbageCollectionSettings.General=True
+GarbageCollectionSettings.Optimization=True
+Engine.Fonts=True
+Engine.DefaultClasses=True
+Engine.DefaultMaterials=True
+Engine.Settings=True
+Engine.Subtitles=True
+Engine.Blueprints=True
+Engine.Framerate=True
+Engine.LevelStreaming=True
+RecastNavMesh.Display=True
+RecastNavMesh.Tick=True
+RecastNavMesh.Generation=True
+RecastNavMesh.Query=True
+RecastNavMesh.Runtime=True
+NavigationSystem.NavigationSystem=True
+NavigationSystem.Navigation Enforcing=True
+NavigationSystem.Agents=True
+NetworkSettings.libcurl=True
+RendererSettings.Mobile=True
+RendererSettings.Culling=True
+RendererSettings.Textures=True
+RendererSettings.Lighting=True
+RendererSettings.Tessellation=True
+RendererSettings.Postprocessing=True
+RendererSettings.Translucency=True
+RendererSettings.DefaultPostprocessingSettings=True
+RendererSettings.Optimizations=True
+RendererSettings.Editor=True
+TutorialSettings.Tutorials=True
+TriggerBox.TransformCommon=True
+TriggerBox.Shape=True
+TriggerBox.Navigation=True
+TriggerBox.Rendering=True
+TriggerBox.Physics=True
+TriggerBox.Collision=True
+TriggerBox.Tags=True
+TriggerBox.Input=True
+TriggerBox.Actor=True
+TriggerBox_Blueprint_C.TransformCommon=True
+TriggerBox_Blueprint_C.Shape=True
+TriggerBox_Blueprint_C.Navigation=True
+TriggerBox_Blueprint_C.Rendering=True
+TriggerBox_Blueprint_C.Physics=True
+TriggerBox_Blueprint_C.Collision=True
+TriggerBox_Blueprint_C.Tags=True
+TriggerBox_Blueprint_C.Input=True
+TriggerBox_Blueprint_C.Actor=True
+TriggerBox_Blueprint_C.Tick=True
+TriggerBox_Blueprint_C.Replication=True
+TriggerBox_Blueprint_C.Variable=True
+TriggerBox_Blueprint_C.Sockets=True
+TriggerBox_Blueprint_C.Events=True
+ArrayProperty.Variable=True
+ArrayProperty.DefaultValueCategory=True
+REINST_Ball_Blueprint_C_230.TransformCommon=True
+REINST_Ball_Blueprint_C_230.StaticMesh=True
+REINST_Ball_Blueprint_C_230.Materials=True
+REINST_Ball_Blueprint_C_230.Physics=True
+REINST_Ball_Blueprint_C_230.Collision=True
+REINST_Ball_Blueprint_C_230.Lighting=True
+REINST_Ball_Blueprint_C_230.Rendering=True
+REINST_Ball_Blueprint_C_230.Tags=True
+REINST_Ball_Blueprint_C_230.Input=True
+REINST_Ball_Blueprint_C_230.Actor=True
+ClassProperty.Variable=True
+ClassProperty.DefaultValueCategory=True
+TriggerBox_Blueprint_C.Default=True
+REINST_TriggerBox_Blueprint_C_473.None=True
+REINST_TriggerBox_Blueprint_C_473.Tick=True
+REINST_TriggerBox_Blueprint_C_473.Rendering=True
+REINST_TriggerBox_Blueprint_C_473.Replication=True
+REINST_TriggerBox_Blueprint_C_473.Input=True
+REINST_TriggerBox_Blueprint_C_473.Actor=True
+REINST_TriggerBox_Blueprint_C_505.Tick=True
+REINST_TriggerBox_Blueprint_C_505.Rendering=True
+REINST_TriggerBox_Blueprint_C_505.Replication=True
+REINST_TriggerBox_Blueprint_C_505.Input=True
+REINST_TriggerBox_Blueprint_C_505.Actor=True
+K2Node_VariableSet.Events=True
+REINST_TriggerBox_Blueprint_C_523.TransformCommon=True
+REINST_TriggerBox_Blueprint_C_523.None=True
+REINST_TriggerBox_Blueprint_C_523.Shape=True
+REINST_TriggerBox_Blueprint_C_523.Navigation=True
+REINST_TriggerBox_Blueprint_C_523.Physics=True
+REINST_TriggerBox_Blueprint_C_523.Collision=True
+REINST_TriggerBox_Blueprint_C_523.Rendering=True
+REINST_TriggerBox_Blueprint_C_523.Tags=True
+REINST_TriggerBox_Blueprint_C_523.Input=True
+REINST_TriggerBox_Blueprint_C_523.Actor=True
+REINST_TriggerBox_Blueprint_C_535.TransformCommon=True
+REINST_TriggerBox_Blueprint_C_535.Shape=True
+REINST_TriggerBox_Blueprint_C_535.Navigation=True
+REINST_TriggerBox_Blueprint_C_535.Rendering=True
+REINST_TriggerBox_Blueprint_C_535.Physics=True
+REINST_TriggerBox_Blueprint_C_535.Collision=True
+REINST_TriggerBox_Blueprint_C_535.Tags=True
+REINST_TriggerBox_Blueprint_C_535.Input=True
+REINST_TriggerBox_Blueprint_C_535.Actor=True
+REINST_TriggerBox_Blueprint_C_553.TransformCommon=True
+REINST_TriggerBox_Blueprint_C_553.Shape=True
+REINST_TriggerBox_Blueprint_C_553.Navigation=True
+REINST_TriggerBox_Blueprint_C_553.Rendering=True
+REINST_TriggerBox_Blueprint_C_553.Physics=True
+REINST_TriggerBox_Blueprint_C_553.Collision=True
+REINST_TriggerBox_Blueprint_C_553.Tags=True
+REINST_TriggerBox_Blueprint_C_553.Input=True
+REINST_TriggerBox_Blueprint_C_553.Actor=True
+REINST_GolTriggerBox_Blueprint_C_573.TransformCommon=True
+REINST_GolTriggerBox_Blueprint_C_573.None=True
+REINST_GolTriggerBox_Blueprint_C_573.Shape=True
+REINST_GolTriggerBox_Blueprint_C_573.Navigation=True
+REINST_GolTriggerBox_Blueprint_C_573.Physics=True
+REINST_GolTriggerBox_Blueprint_C_573.Collision=True
+REINST_GolTriggerBox_Blueprint_C_573.Rendering=True
+REINST_GolTriggerBox_Blueprint_C_573.Tags=True
+REINST_GolTriggerBox_Blueprint_C_573.Input=True
+REINST_GolTriggerBox_Blueprint_C_573.Actor=True
+GolTriggerBox_Blueprint_C.TransformCommon=True
+GolTriggerBox_Blueprint_C.Default=True
+GolTriggerBox_Blueprint_C.Shape=True
+GolTriggerBox_Blueprint_C.Navigation=True
+GolTriggerBox_Blueprint_C.Physics=True
+GolTriggerBox_Blueprint_C.Collision=True
+GolTriggerBox_Blueprint_C.Rendering=True
+GolTriggerBox_Blueprint_C.Tags=True
+GolTriggerBox_Blueprint_C.Input=True
+GolTriggerBox_Blueprint_C.Actor=True
+GolTriggerBox_Blueprint_C.Tick=True
+GolTriggerBox_Blueprint_C.Replication=True
 
 [AssetEditorManager]
 CleanShutdown=True
 
 [PlacementMode]
+RecentlyPlaced=/Script/Engine.TriggerBox;/Engine/Transient.ActorFactoryTriggerBox_0
 RecentlyPlaced=/Game/Mesh/Box_Pub.Box_Pub;
 RecentlyPlaced=/Engine/BasicShapes/Sphere.Sphere;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Engine/BasicShapes/Cylinder.Cylinder;/Engine/Transient.ActorFactoryBasicShape_0
@@ -1162,7 +1368,7 @@ RecentlyPlaced=/Game/Blueprints/Player_Bleuprint.Player_Bleuprint;
 /Game/Blueprints/Ball_Mat.Ball_Mat=1
 /Game/Blueprints/TriggerMat.TriggerMat=1
 /Game/Blueprints/Phys_Mat.Phys_Mat=1
-/Game/Mat/Ball_Phys_Mat.Ball_Phys_Mat=1
+/Game/Mat/Ball_Phys_Mat.Ball_Phys_Mat=0
 /Engine/BasicShapes/BasicShapeMaterial.BasicShapeMaterial=1
 /Game/Mat/Ball_Mat.Ball_Mat=1
 /Game/Mesh/Box_Pub.Box_Pub=1
@@ -1175,6 +1381,8 @@ RecentlyPlaced=/Game/Blueprints/Player_Bleuprint.Player_Bleuprint;
 /Game/Blueprints/Run_Blueprint.Run_Blueprint=1
 /Game/Perso/Desktop_Skeleton.Desktop_Skeleton=1
 /Game/Perso/Desktop.Desktop=1
+/Game/Blueprints/TriggerBox_Blueprint.TriggerBox_Blueprint=1
+/Game/Blueprints/GolTriggerBox_Blueprint.GolTriggerBox_Blueprint=1
 
 [ContentBrowser]
 AssetDialog.ThumbnailSizeScale=0.100000
@@ -1191,7 +1399,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game
+ContentBrowserTab1.SelectedPaths=/Game/Blueprints
 ContentBrowserTab1.CollectionsExpanded=True
 ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
@@ -1199,8 +1407,8 @@ ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
 
 [DetailPropertyExpansion]
-InputSettings=Object.Bindings.ActionMappings.ActionMappings[0]" "Object.Bindings.AxisMappings.AxisMappings[1]
-Object=
+InputSettings=
+Object="Object.CameraSettings.PostProcessSettings" 
 MyPlayer_C=
 Character=
 Pawn=
@@ -1211,30 +1419,40 @@ REINST_MyPlayer_C_60=Object.Character.CharacterMovement.Object.Character Movemen
 REINST_MyPlayer_C_106=Object.Character.CharacterMovement.Object.Character Movement (General Settings).RotationRate
 REINST_MyPlayer_C_110=Object.Character.CharacterMovement.Object.Character Movement (General Settings).RotationRate
 REINST_MyPlayer_C_114=Object.Character.CharacterMovement.Object.Character Movement (General Settings).RotationRate
-CameraComponent=Object.CameraSettings.PostProcessSettings
-SceneComponent=
-ActorComponent=
-Ball_Blueprint_C=
-StaticMeshActor=
+CameraComponent="Object.CameraSettings.PostProcessSettings" 
+SceneComponent="Object.CameraSettings.PostProcessSettings" 
+ActorComponent="Object.CameraSettings.PostProcessSettings" 
+Ball_Blueprint_C="Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance.WalkableSlopeOverride" 
+StaticMeshActor="Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance.WalkableSlopeOverride" 
 LandscapeGrassType=Object.Grass.GrassVarieties" "Object.Grass.GrassVarieties.GrassVarieties[0]
 MaterialExpressionLandscapeLayerBlend=Object.Layers" "Object.Layers.Layers[0]" "Object.Layers.Layers[1]
 MaterialExpression=
 MaterialExpressionLandscapeGrassOutput=Object.GrassTypes" "Object.GrassTypes.GrassTypes[0]
 MaterialExpressionCustomOutput=Object.GrassTypes" "Object.GrassTypes.GrassTypes[0]
 MaterialExpressionConstant3Vector=Object.Constant
-PhysicalMaterial=Object.TireFrictionScales
+PhysicalMaterial="Object.TireFrictionScales" 
 Brush=Object.BrushBuilder.BrushBuilder.Object.BrushSettings
 EditorLoadingSavingSettings=Object.AutoReimport" "Object.Blueprints" "Object.AutoSave
 BlockingVolume=Object.BrushBuilder.BrushBuilder.Object.BrushSettings
 Volume=Object.BrushBuilder.BrushBuilder.Object.BrushSettings
+REINST_Ball_Blueprint_C_62="Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance.WalkableSlopeOverride" 
+REINST_Ball_Blueprint_C_84="Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance.WalkableSlopeOverride" 
+REINST_Ball_Blueprint_C_88="Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance.WalkableSlopeOverride" 
+REINST_Ball_Blueprint_C_96="Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance.WalkableSlopeOverride" 
+REINST_Ball_Blueprint_C_104="Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance.WalkableSlopeOverride" 
+REINST_Ball_Blueprint_C_230="Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance.WalkableSlopeOverride" 
+REINST_Ball_Blueprint_C_238="Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance.WalkableSlopeOverride" 
+REINST_Ball_Blueprint_C_298="Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance.WalkableSlopeOverride" 
 
 [DetailCustomWidgetExpansion]
-InputSettings=InputSettings.Bindings.AxisMappings.MoveX,InputSettings.Bindings.AxisMappings.MoveY,InputSettings.Bindings.AxisMappings.TurnRate,InputSettings.Bindings.ActionMappings.NewActionMapping_0,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Sprint,
+InputSettings=InputSettings.Bindings.AxisMappings.MoveX,InputSettings.Bindings.AxisMappings.MoveY,InputSettings.Bindings.AxisMappings.TurnRate,InputSettings.Bindings.ActionMappings.NewActionMapping_0,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Sprint,InputSettings.Bindings.AxisMappings,
 StaticMeshActor=StaticMeshActor.Physics.ConstraintsGroup,
 SphereComponent=SphereComponent.Collision.Collision,
 StaticMeshComponent=StaticMeshComponent.Collision.Collision,
-Ball_Blueprint_C=
+Ball_Blueprint_C=Ball_Blueprint_C.Physics.ConstraintsGroup,
 StaticMesh=StaticMesh.LOD0.MeshBuildSettings,
+GameMapsSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,
 
 [DetailCategoriesAdvanced]
 InputSettings.Bindings=False
@@ -1264,6 +1482,13 @@ Ball_Blueprint_C.Rendering=True
 Ball_Blueprint_C.StaticMesh=True
 WorldSettings.Physics=False
 StaticMesh.StaticMesh=True
+GameMapsSettings.DefaultMaps=False
+PhysicsSettings.Constants=True
+PhysicsSettings.Simulation=True
+TriggerBox_Blueprint_C.Collision=True
+K2Node_VariableGet.Variable=True
+ObjectProperty.Variable=True
+TriggerBox_Blueprint_C.Actor=True
 
 [/Script/UnrealEd.EditorLoadingSavingSettings]
 bForceCompilationAtStartup=False
@@ -1318,7 +1543,7 @@ bPreserveLocalTransform=False
 bDeleteExistingMorphTargetCurves=False
 
 [MessageLog]
-LastLogListing=LightingResults
+LastLogListing=PIE
 
 [LightingBuildOptions]
 OnlyBuildSelected=False
@@ -1345,6 +1570,8 @@ bRealtimeMaterialViewport=False
 
 [SuppressableDialogs]
 Warning_NoPreviewMeshFound=False
+ChangeVariableType_Warning=False
+DeleteVariableInUse_Warning=True
 
 [MaterialEditor]
 LightDir=P=-39.999996 Y=27.500000 R=0.000000
@@ -1362,7 +1589,7 @@ MaterialQualityLevel=1
 
 [RootWindow]
 ScreenPosition=X=172.000 Y=322.000
-WindowSize=X=1410.000 Y=850.000
+WindowSize=X=1430.000 Y=870.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -1375,7 +1602,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewportID=1
 
 [Directories2]
-UNR=../../../../../../MyGAMES/PitchPirates/Content
+UNR=../../../../../../Git/racine/Este/PitchPirates/Content
 BRUSH=../../../../../../MyGAMES/MyProject2/Content/
 FBX=../../../../../../MyGAMES/MyProject2/Content/
 FBXAnim=../../../../../../MyGAMES/MyProject2/Content/
