--- a/Este/PitchPirates/Config/DefaultEngine.ini
+++ b/Este/PitchPirates/Config/DefaultEngine.ini
@@ -84,5 +84,9 @@ InitialAverageFrameRate=0.016667
 +PhysicalSurfaces=(Type=SurfaceType1,Name="PassThrough")
 
 [/Script/EngineSettings.GameMapsSettings]
-GlobalDefaultGameMode=/Game/Blueprints/Gamemode_Blueprint.Gamemode_Blueprint_C
+GlobalDefaultGameMode=/Game/Blueprints/BP_Gamemode.BP_Gamemode_C
+GameDefaultMap=/Game/MainLVL
+EditorStartupMap=/Game/MainLVL
+ServerDefaultMap=/Game/MainLVL
+bUseSplitscreen=False
 
